k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mbta
  labels:
    app.kubernetes.io/part-of: mbta-winter-2026
