k8s/mbta-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mbta-ingress
  namespace: mbta
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
spec:
  rules:
  - host: mbta.agent.mitdataworksai.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend
            port:
              number: 3000
  - host: exchange-new.agent.mitdataworksai.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: exchange
            port:
              number: 8100
  - host: grafana.agent.mitdataworksai.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: grafana
            port:
              number: 3001
  - host: jaeger.agent.mitdataworksai.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: jaeger
            port:
              number: 16686
